# cross-sectional-short-term-reversal

./: .gitignore  docker-compose.yml  install.sh
bybit_xsreversal/: .env.example  OPTIMIZER_RECOMMENDATIONS.md  README.md  __init__.py  pyproject.toml
bybit_xsreversal/bybit_xsreversal.egg-info/: PKG-INFO  SOURCES.txt
bybit_xsreversal/config/: config.yaml
bybit_xsreversal/config/profiles/: profile_candidate_1.yaml  profile_default.yaml
bybit_xsreversal/docs/: CONFIG_UPDATES.md  INTRADAY_EXITS.md  ROLL_OUT.md
bybit_xsreversal/scripts/: analyze_last_30d.py  optimize_until_profitable.sh  run_backtest.sh  run_live.sh  run_optimize.sh
bybit_xsreversal/scripts/research/: __init__.py  counterfactuals_30d.py  optimize_params_30d.py  rebalance_timeframe_counterfactuals_30d.py  sensitivity_30d.py  trade_forensics_30d.py  validate_research_30d.py
bybit_xsreversal/src/: config.py  live.py  main.py
bybit_xsreversal/src/backtest/: backtester.py  metrics.py  optimizer.py
bybit_xsreversal/src/bybit_xsreversal.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bybit_xsreversal/src/data/: bybit_client.py  caching.py  market_data.py
bybit_xsreversal/src/execution/: executor.py  intraday_exits.py  rebalance.py  risk.py  risk_exits.py
bybit_xsreversal/src/strategy/: portfolio.py  regime.py  xs_reversal.py
bybit_xsreversal/src/utils/: lock.py  logging.py  math.py  time.py
bybit_xsreversal/tests/: __init__.py  test_intraday_exits.py  test_leverage_startup.py  test_risk_exits.py  test_turnover_cap.py
scripts/: run_backtest.sh  run_live.sh
(+5 files in other folders)
